--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Assignment3</string>
+    <string name="app_name">TSA Wait Times</string>
     <string name="action_settings">Settings</string>
     <string name="welcome_to_tsa_wait_time">Welcome to TSA Wait Time</string>
     <string name="enter">Enter</string>
@@ -16,5 +16,8 @@
     <string name="lightblue">LightBlue</string>
     <string name="aboutAPI">"TSA Wait Times is an API created by account TSA WaitTimes. It's goal is to retrieve the estimated security wait times of all US Airports. In its current form the API includes 7 airports and only indicates if said airport offers pre-check."</string>
     <string name="airportList">0: Aberdeen Regional \n1: Abilene Regional \n2: Adak Naval Air Station \n3: Rafael Hernandez \n4: San Luis Valley/Bergman Field \n5: Southwest Georgia Regional \n6: Albany County \n7: Albuquerque International Sunport</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
